# edgar-client

./: README.md  clicklite.py  clicklite_demo.py
edgar_client/: AUDIT.md  README.md  pyproject.toml
edgar_client/src/edgar_client/: __init__.py  adapters.py  api.py  cli.py  exceptions.py  models.py  rate_limiter.py  sessions.py  structures.py  ticker_cache.py
edgar_client/tests/: test_cli.py  test_client.py  test_exceptions.py  test_models.py  test_response.py  test_session.py  test_validation.py
