[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgar-client"
version = "0.1.0"
description = "A requests-style Python HTTP client for SEC EDGAR"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",    # CLI framework
    "rich>=13.0",    # terminal tables and formatting
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

# ── Entry point ──────────────────────────────────────────────────────────────
# After `pip install -e .` the `edgar` command is available in the shell.
[project.scripts]
edgar = "edgar_client.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/edgar_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
